--- a/Projet Web Commerce/Views/PPProduits/Details.cshtml
+++ b/Projet Web Commerce/Views/PPProduits/Details.cshtml
@@ -4,87 +4,64 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
+<h1>Détails</h1>
 
 <div>
-    <h4>PPProduits</h4>
+    <h4>Produits</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DateCreation)
+        <dt class="col-sm-2">
+            Photo de l’article :
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DateCreation)
+        <dd class="col-sm-10">
+            <img src="~/Logo/@(Model.Photo)" alt="@(Model.Photo)" width="140" height="200" />
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DateMAJ)
+
+        <dt class="col-sm-2">
+            Nom du produit :
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DateMAJ)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Nom)
-        </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Nom)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
+
+        <dt class="col-sm-2">
+            Description plus élaborée :
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Description)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Photo)
+
+        <dt class="col-sm-2">
+            Catégorie du produit :
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Photo)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.PPCategories.Description)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PrixDemande)
+
+        <dt class="col-sm-2">
+            Prix demandé :
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PrixDemande)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.PrixDemande) $
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Disponibilite)
+
+        <dt class="col-sm-2">
+            Catégorie du produit :
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Disponibilite)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.PPCategories.Description)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Poids)
+
+        <dt class="col-sm-2">
+            Catégorie du produit :
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Poids)
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.PPCategories.Description)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DateVente)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DateVente)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PrixVente)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PrixVente)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PPVendeurs)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PPVendeurs.NoVendeur)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PPCategories)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PPCategories.NoCategorie)
-        </dd>
+
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.NoProduit">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.NoProduit">Modifier</a> |
+    <a asp-action="Index">Retour à la liste</a>
 </div>
