--- a/Projet Web Commerce/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Projet Web Commerce/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -12,6 +12,10 @@
         <form id="profile-form" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
             <div class="form-floating mb-3">
+                <input asp-for="Courriel" class="form-control" value="@Model.Courriel" disabled />
+                <label asp-for="Courriel" class="form-label"></label>
+            </div>
+            <div class="form-floating mb-3">
                 <input asp-for="Input.Nom" class="form-control" placeholder="Veuillez entrer votre nom." />
                 <label asp-for="Input.Nom" class="form-label"></label>
                 <span asp-validation-for="Input.Prenom" class="text-danger"></span>
@@ -59,8 +63,25 @@
                 <label asp-for="Input.Pays" class="form-label"></label>
                 <span asp-validation-for="Input.Pays" class="text-danger"></span>
             </div>
+            <div class="form-floating mb-3">
+                <input asp-for="Input.Telephone" class="form-control" placeholder="Veuillez entrer votre numéro de téléphone" />
+                <label asp-for="Input.Telephone" class="form-label"></label>
+                <span asp-validation-for="Input.Telephone" class="text-danger"></span>
+            </div>
+            <div class="form-floating mb-3">
+                <input asp-for="Input.Cellulaire" class="form-control" placeholder="Veuillez entrer votre cellulaire"  />
+                <label asp-for="Input.Cellulaire" class="form-label"></label>
+                <span asp-validation-for="Input.Cellulaire" class="text-danger"></span>
+            </div>
             <button id="update-profile-button" type="submit" class="w-100 btn btn-lg btn-primary">Enregistrer</button>
         </form>
+    </div>
+    <!-- Section pour les données des vendeurs-->
+    <div class="col-md-6">
+        <div class="form-floating mb-3">
+            <input asp-for="Courriel" class="form-control" value="@Model.Courriel" disabled />
+            <label asp-for="Courriel" class="form-label"></label>
+        </div>
     </div>
 </div>
 
