--- a/Projet Web Commerce/Views/PPProduits/Details.cshtml
+++ b/Projet Web Commerce/Views/PPProduits/Details.cshtml
@@ -46,18 +46,50 @@
         </dd>
 
         <dt class="col-sm-2">
-            Catégorie du produit :
+            Disponible ?
+        </dt>
+        @if (@Model.Disponibilite == true)
+        {
+            <dd class="col-sm-10">
+                Oui
+            </dd>
+        }
+        else
+        {
+            <dd class="col-sm-10">
+                Non
+            </dd>
+        }
+
+        <dt class="col-sm-2">
+            Poids de l’article :
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.PPCategories.Description)
+            @Html.DisplayFor(model => model.Poids) Kg
         </dd>
 
         <dt class="col-sm-2">
-            Catégorie du produit :
+            Nombre d’items :
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.PPCategories.Description)
+            @Html.DisplayFor(model => model.NombreItems)
         </dd>
+
+        <dt class="col-sm-2">
+            Prix de vente : 
+        </dt>
+        @if (Model.PrixVente != null)
+        {
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.PrixVente) $
+            </dd>
+        }
+        else
+        {
+            <dd class="col-sm-10">
+                Le prix de vente n'est pas précisée
+            </dd>
+        }
 
     </dl>
 </div>
