--- a/Projet Web Commerce/Views/Shared/_Layout.cshtml
+++ b/Projet Web Commerce/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Les Petites Puces</title>
+    <title>@ViewData["Title"] - Projet_Web_Commerce</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Projet_Web_Commerce.styles.css" asp-append-version="true" />
@@ -20,7 +20,7 @@
         }
 
         .container-custom{
-            background-color: rgb(187, 221, 230);
+            background-color: rgb(236, 235, 243);
             width: 100%;
             height: 100%;
             min-width: 75%; 
@@ -32,7 +32,7 @@
         }
     </style>
 </head>
-<body style="background-color: rgb(139, 184, 232)">
+<body style="background-color: rgb(236, 235, 243)">
     <header>
         <nav class="navbar navbar-custom navbar-expand-sm navbar-toggleable-sm navbar-light bg-customMauve border-bottom box-shadow mb-3">
             <div class="container-fluid">
@@ -72,8 +72,8 @@
             @RenderBody()
         </main>
     </div>
-    <footer class="container-custom H-100" style="background-color: rgb(139, 184, 232)">
-        &copy; 2024 - Les Petites Puces - <a asp-area="" asp-controller="Home" asp-action="Privacy">Confidentialité</a>
+    <footer class="container-custom H-100" style="background-color: rgb(236, 235, 243)">
+        &copy; 2024 - Projet_Web_Commerce - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
     </footer>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
