--- a/Projet Web Commerce/Views/Shared/_LoginPartial.cshtml
+++ b/Projet Web Commerce/Views/Shared/_LoginPartial.cshtml
@@ -8,7 +8,10 @@
 @if (SignInManager.IsSignedIn(User))
 {
     <li class="nav-item">
-            <a id="manage" class="nav-link" style="color: rgb(249, 229, 71)" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Mon profil</a> @*Hello @UserManager.GetUserName(User)!*@
+            <a id="paniers" class="nav-link" style="color: rgb(249, 229, 71)" asp-area="" asp-controller="Paniers" asp-action="Index" title="Paniers">Mes paniers</a>
+    </li>
+    <li class="nav-item">
+            <a id="manage" class="nav-link" style="color: rgb(249, 229, 71)" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Mon profil</a>
     </li>
     <li class="nav-item">
         <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
