--- a/Projet Web Commerce/Areas/Identity/Pages/Account/Manage/ProfilClient.cshtml
+++ b/Projet Web Commerce/Areas/Identity/Pages/Account/Manage/ProfilClient.cshtml
@@ -1,8 +1,8 @@
 ﻿@page
-@model IndexModel
+@model ProfilClientModel
 @{
     ViewData["Title"] = "Profil";
-    ViewData["ActivePage"] = ManageNavPages.Index;
+    ViewData["ActivePage"] = ManageNavPages.ProfilClient;
 }
 
 <h3>@ViewData["Title"]</h3>
@@ -59,7 +59,7 @@
                 <span asp-validation-for="Input.CodePostal" class="text-danger"></span>
             </div>
             <div class="form-floating mb-3">
-                <input asp-for="Input.Pays" class="form-control" placeholder="Veuillez entrer votre pays" disabled value="Canada"/>
+                <input asp-for="Input.Pays" class="form-control" placeholder="Veuillez entrer votre pays" disabled value="@Model.Input.Pays" />
                 <label asp-for="Input.Pays" class="form-label"></label>
                 <span asp-validation-for="Input.Pays" class="text-danger"></span>
             </div>
@@ -69,22 +69,15 @@
                 <span asp-validation-for="Input.Telephone" class="text-danger"></span>
             </div>
             <div class="form-floating mb-3">
-                <input asp-for="Input.Cellulaire" class="form-control" placeholder="Veuillez entrer votre cellulaire"  />
+                <input asp-for="Input.Cellulaire" class="form-control" placeholder="Veuillez entrer votre cellulaire" />
                 <label asp-for="Input.Cellulaire" class="form-label"></label>
                 <span asp-validation-for="Input.Cellulaire" class="text-danger"></span>
             </div>
             <button id="update-profile-button" type="submit" class="w-100 btn btn-lg btn-primary">Enregistrer</button>
         </form>
     </div>
-    <!-- Section pour les données des vendeurs-->
-    <div class="col-md-6">
-        <div class="form-floating mb-3">
-            <input asp-for="Courriel" class="form-control" value="@Model.Courriel" disabled />
-            <label asp-for="Courriel" class="form-label"></label>
-        </div>
-    </div>
 </div>
 
 @section Scripts {
-    <partial name="_ValidationScriptsPartial" />
+    @* <partial name="_ValidationScriptsPartial" /> *@
 }
