--- a/Projet Web Commerce/Views/PPProduits/Create.cshtml
+++ b/Projet Web Commerce/Views/PPProduits/Create.cshtml
@@ -54,7 +54,7 @@
 
             <div class="form-group">
                 <label asp-for="Photo" class="control-label">Photo de l’article :</label>
-                <input type="file" id="file" name="file" accept="image/" class="form-control" required />
+                <input type="file" id="file" name="file" accept="image/jpg" class="form-control" required />
                 <span asp-validation-for="Photo" class="text-danger"></span>
             </div>
             <br>
@@ -83,7 +83,7 @@
             <div class="form-group">
                 <label asp-for="Poids" class="control-label">Poids de l’article :</label>
                 <div class="input-group">
-                    <input asp-for="Poids" class="form-control" class="form-control" type="number" min="0" step="any"  data-val="true" required />
+                    <input asp-for="Poids" class="form-control" type="number" min="0" step="any"  data-val="true" required />
                     <span class="input-group-text" >(Kg)</span>
                 </div>
                 <span asp-validation-for="Poids" class="text-danger"></span>
@@ -92,7 +92,7 @@
 
             <div class="form-group">
                 <label asp-for="NombreItems" class="control-label">Nombre d’items :</label>
-                <input asp-for="NombreItems" class="form-control" class="form-control" type="number" min="0" data-val="true" step=".1" required />
+                <input asp-for="NombreItems" class="form-control" type="number" min="1" data-val="true" required />
                 <span asp-validation-for="NombreItems" class="text-danger"></span>
             </div>
             <br>
@@ -106,7 +106,7 @@
             <div class="form-group">
                 <label asp-for="PrixVente" class="control-label">Prix de vente (Optionel) :</label>
                 <div class="input-group">
-                    <input asp-for="PrixVente" class="form-control" class="form-control" type="number" min="0" step="any" data-val="true"  />
+                    <input asp-for="PrixVente" class="form-control" type="number" min="0" step="any" data-val="true"  />
                     <span class="input-group-text">(CAD)</span>
                 </div>
                 <span asp-validation-for="PrixVente" class="text-danger"></span>
