--- a/Projet Web Commerce/Views/MainMenu/Catalogue.cshtml
+++ b/Projet Web Commerce/Views/MainMenu/Catalogue.cshtml
@@ -43,7 +43,7 @@ else
 
 <h3>Liste des Catégories</h3>
 <div class="container mt-4">
-    @if (Model != null && Model != null)
+    @if (Model != null)
     {
         <section class="autoplay" data-sizes="50vw">
             @foreach (var category in Model)
