--- a/Projet Web Commerce/Views/PPProduits/Delete.cshtml
+++ b/Projet Web Commerce/Views/PPProduits/Delete.cshtml
@@ -1,93 +1,122 @@
 ﻿@model Projet_Web_Commerce.Models.PPProduits
+@using Microsoft.AspNetCore.Identity
+@inject UserManager<Projet_Web_Commerce.Areas.Identity.Data.Utilisateur> _userManager
+@inject SignInManager<Projet_Web_Commerce.Areas.Identity.Data.Utilisateur> SignInManager
 
 @{
     ViewData["Title"] = "Delete";
+    var user = await _userManager.GetUserAsync(User);
+    Console.WriteLine("NoProduit : " + Model.NoProduit);
 }
 
-<h1>Delete</h1>
+@if (!SignInManager.IsSignedIn(User) || User.IsInRole("Client"))
+{
+    Console.WriteLine("yes");
+    <text>
+        <script>
+            debugger;
+            window.location.href = '/PPProduits/ErrorProduit';
+        </script>
+    </text>
+}
+else
+{
+    <h1>Supprimer</h1>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>PPProduits</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DateCreation)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DateCreation)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DateMAJ)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DateMAJ)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Nom)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Nom)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Photo)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Photo)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PrixDemande)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PrixDemande)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Disponibilite)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Disponibilite)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Poids)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Poids)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DateVente)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DateVente)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PrixVente)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PrixVente)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PPVendeurs)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PPVendeurs.NoVendeur)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PPCategories)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PPCategories.NoCategorie)
-        </dd>
-    </dl>
+    <h3>Êtes-vous sûr de vouloir le supprimer ?</h3>
+    <div>
+        <h4>PPProduits</h4>
+        <hr />
+        <dl class="row">
+            <dt class="col-sm-2">
+                Photo de l’article :
+            </dt>
+            <dd class="col-sm-10">
+                <img src="~/Logo/@(Model.Photo)" alt="@(Model.Photo)" width="140" height="200" />
+            </dd>
+
+            <dt class="col-sm-2">
+                Nom du produit :
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Nom)
+            </dd>
+
+            <dt class="col-sm-2">
+                Description plus élaborée :
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Description)
+            </dd>
+
+            <dt class="col-sm-2">
+                Catégorie du produit :
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.PPCategories.Description)
+            </dd>
+
+            <dt class="col-sm-2">
+                Prix demandé :
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.PrixDemande) $
+            </dd>
+
+            <dt class="col-sm-2">
+                Disponible ?
+            </dt>
+            @if (@Model.Disponibilite == true)
+            {
+                <dd class="col-sm-10">
+                    Oui
+                </dd>
+            }
+            else
+            {
+                <dd class="col-sm-10">
+                    Non
+                </dd>
+            }
+
+            <dt class="col-sm-2">
+                Poids de l’article :
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.Poids) Kg
+            </dd>
+
+            <dt class="col-sm-2">
+                Nombre d’items :
+            </dt>
+            <dd class="col-sm-10">
+                @Html.DisplayFor(model => model.NombreItems)
+            </dd>
+
+            <dt class="col-sm-2">
+                Prix de vente :
+            </dt>
+            @if (Model.PrixVente != null)
+            {
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.PrixVente) $
+                </dd>
+            }
+            else
+            {
+                <dd class="col-sm-10">
+                    Le prix de vente n'est pas précisée
+                </dd>
+            }
+
+        </dl>
     
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="NoProduit" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
-</div>
+        <form asp-action="Delete">
+            <input type="hidden" asp-for="NoProduit" name="Id" />
+            <button type="submit" class="btn btn-danger" onclick="return confirm('Confirmer Suppression')">
+                Supprimer
+            </button> |
+            <a asp-action="Index">Retour à la liste</a>
+        </form>
+    </div>
+}
