--- a/Projet Web Commerce/Views/Shared/_LoginPartial.cshtml
+++ b/Projet Web Commerce/Views/Shared/_LoginPartial.cshtml
@@ -1,5 +1,8 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using Projet_Web_Commerce.Areas.Identity.Data
+@using Projet_Web_Commerce.Data
+
+@inject AuthDbContext _context
 
 @inject SignInManager<Utilisateur> SignInManager
 @inject UserManager<Utilisateur> UserManager
@@ -7,18 +10,27 @@
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
 {
-    <li class="nav-item">
-        @{
-            var user = await UserManager.GetUserAsync(User);
-            bool estDansRole = await UserManager.IsInRoleAsync(user, "Client");
+    
+    var user = await UserManager.GetUserAsync(User);
+            
+    bool estDansRole = await UserManager.IsInRoleAsync(user, "Client");
+
+        var nom = _context.PPClients.Where(v => v.AdresseEmail == user.UserName).FirstOrDefault().Nom;
+        var prenom = _context.PPClients.Where(v => v.AdresseEmail == user.UserName).FirstOrDefault().Prenom;
+
+        @if (nom != null && prenom != null){
+            <li class="nav-item">
+                <p id="nom" class="nav-link" style="color: rgb(249, 229, 71)">Bonjour @prenom @nom!</p>
+            </li>
         }
+    <li class="nav-item">
         @if (estDansRole)
         {
-            <a id="manage" class="nav-link" style="color: rgb(249, 229, 71)" asp-area="Identity" asp-page="/Account/Manage/ProfilClient" title="Manage">Mon profil</a> @*Hello @UserManager.GetUserName(User)!*@
+                <a id="manage" class="nav-link" style="color: rgb(249, 229, 71)" asp-area="Identity" asp-page="/Account/Manage/ProfilClient" title="Manage">Mon profil</a>
         }
         else if ((estDansRole = await UserManager.IsInRoleAsync(user, "Vendeur")))
         {
-            <a id="manage" class="nav-link" style="color: rgb(249, 229, 71)" asp-area="Identity" asp-page="/Account/Manage/ProfilVendeur" title="Manage">Mon profil</a> @*Hello @UserManager.GetUserName(User)!*@
+            <a id="manage" class="nav-link" style="color: rgb(249, 229, 71)" asp-area="Identity" asp-page="/Account/Manage/ProfilVendeur" title="Manage">Mon profil</a>
         }
             
     </li>
