--- a/Projet Web Commerce/Views/MainMenu/Catalogue.cshtml
+++ b/Projet Web Commerce/Views/MainMenu/Catalogue.cshtml
@@ -102,6 +102,45 @@ else
         <p>Connectez-vous pour voir vos paniers.</p>
     }
 </div>
+<div class="d-flex flex-wrap align-content-start bg-light" style="margin-bottom:50px;">
+    @foreach (var category in Model.CategoriesList)
+    {
+        @if (category.PPProduits != null)
+        {
+            <div class="card" style="width:50%; margin-bottom:10px;">
+                <div class="card-body">
+                    <h2 class="card-title">@Html.DisplayFor(modelItem => category.Description)</h2>
+                    <h5 class="card-details">@Html.DisplayFor(modelItem => category.Details)</h5>
+
+                    <p>Vendeurs:</p>
+                    <div style="height: 40%; width:50%; overflow:auto">
+                        @foreach (var group in category.PPProduits
+                       .Where(p => p.PPVendeurs != null && p.PPVendeurs.NomAffaires != null)
+                       .GroupBy(p => p.PPVendeurs.NomAffaires))
+                        {
+                            if (group.Key != null)
+                            {
+                                <a asp-controller="MainMenu"
+                                   asp-route-id="@group.Key"
+                                   asp-action="CatalogueVendeur">
+                                    @group.Key (@group.Count())
+                                </a>
+
+                                <br />
+                            }
+                            else
+                            {
+                                <p>Vendeur sans nom</p>
+                            }
+                        }
+                    </div>
+
+                </div>
+            </div>
+        }
+        
+    }
+</div>
 
 
 <!-- Log the path of the Slick Carousel script -->
